# beancount-gocardless

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mise.toml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
docs/: cli.rst  client.rst  conf.py  importer.rst  index.rst
src/beancount_gocardless/: __init__.py  __main__.py  cli.py  client.py  importer.py  mock_client.py  models.py  tui.py  tui2.py  utils.py
src/beancount_gocardless/openapi/: swagger.json
tests/: conftest.py  test_cli.py  test_client.py  test_importer.py  test_models.py
