[project]
name = "beancount-gocardless"
version = "0.1.13"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "requests",
    "requests-cache",
    "beancount",
    "beangulp",
    "pyyaml",
    "rich",
    "textual>=3.2.0",
    "textual-dev>=1.7.0",
    "pydantic>=2.0.0",
    "pre-commit>=4.5.1",
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
beancount-gocardless = "beancount_gocardless.cli:main"
beancount-gocardless-tui = "beancount_gocardless.tui:main"

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst_parser",
]
lint = [
    "ruff>=0.9.8",
]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
