[project]
name = "beancount-gocardless"
version = "0.1.14"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests",
    "requests-cache",
    "beancount",
    "beangulp",
    "pyyaml",
    "rich",
    "pydantic>=2.0.0",
    "pre-commit>=4.5.1",
    "questionary>=2.0.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
beancount-gocardless = "beancount_gocardless.cli:main"

[project.optional-dependencies]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints"
]
lint = [
    "ruff>=0.9.8",
]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
