[project]
name = "beancount-gocardless"
version = "0.1.14"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests",
    "requests-cache",
    "beancount",
    "beangulp",
    "pyyaml",
    "rich",
    "pydantic>=2.0.0",
    "questionary>=2.0.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
beancount-gocardless = "beancount_gocardless.cli:main"

[project.optional-dependencies]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints"
]
lint = [
    "ruff>=0.9.8",
    "pre-commit>=3.5.0",
]
test = [
    "pytest",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
